Fix contrast of grey links

--- a/src/amo/css/inc/vars.scss
+++ b/src/amo/css/inc/vars.scss
@@ -35,5 +35,3 @@ $max-content-width: 1366px;
 // Control the gutter to the left and right of the header and footer.
 // Mainly relevant to non-mobile screen-sizes.
 $header-footer-gutter: 24px;
-
-$footer-copyright-link: #9b9b9b;
